--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           # --- Path Definitions ---
           ZEPHYR_DIR="$ZMK_REPO_ROOT/zephyr"
           ZEPHYR_ENV_SCRIPT="$ZEPHYR_DIR/zephyr-env.sh"
-          APP_REPO_DIR="$ZMK_REPO_ROOT/app"
+          APP_REPO_DIR="$ZMK_REPO_ROOT/app" # ZMK Clone Root
           
           # 1. Create the base ZMK structure
           echo "--- 1. Creating target directories ---"
@@ -48,33 +48,24 @@ jobs:
           git clone --depth 1 --branch "$ZEPHYR_REVISION" https://github.com/zephyrproject-rtos/zephyr.git "$ZEPHYR_DIR" || { echo "FATAL: Zephyr clone failed."; exit 1; }
           git clone --depth 1 --branch "$MCUB_REVISION" https://github.com/mcu-tools/mcuboot.git "$ZMK_REPO_ROOT/bootloader/mcuboot" || { echo "FATAL: MCUBoot clone failed."; exit 1; }
 
-          # 3. 🔍 VALIDATION CHECK: Verify critical ZMK Shield Path
-          SHIELD_CHECK_PATH="$APP_REPO_DIR/app/boards/shields/crkbd_left"
-          if [ ! -d "$SHIELD_CHECK_PATH" ]; then
-              echo "FATAL: Critical ZMK shield path not found at $SHIELD_CHECK_PATH"
-              echo "Diagnostic: Listing contents of $APP_REPO_DIR:"
-              ls -l "$APP_REPO_DIR"
-              exit 1
-          fi
-          
-          # 4. 🔍 VALIDATION CHECK: Verify critical Zephyr paths
-          echo "--- 4. VALIDATING ZEPHYR ENVIRONMENT ---"
-          if [ ! -d "$ZEPHYR_DIR" ]; then echo "FATAL: Zephyr base directory not found at $ZEPHYR_DIR"; exit 1; fi
-          if [ ! -f "$ZEPHYR_ENV_SCRIPT" ]; then echo "FATAL: Zephyr environment script not found at $ZEPHYR_ENV_SCRIPT"; exit 1; fi
+          # 3. 🔍 VALIDATION CHECK: Verify critical Zephyr paths
+          echo "--- 3. VALIDATING ZEPHYR ENVIRONMENT ---"
+          if [ ! -d "$ZEPHYR_DIR" ]; then echo "FATAL: Zephyr base directory not found at $ZEPHYR_DIR"; exit 1; }
+          if [ ! -f "$ZEPHYR_ENV_SCRIPT" ]; then echo "FATAL: Zephyr environment script not found at $ZEPHYR_ENV_SCRIPT"; exit 1; }
           echo "TRACE: All environment checks passed."
 
-          # 5. Sourcing Zephyr Environment (Error Handled Inline)
-          echo "--- 5. Sourcing Zephyr Environment Variables ---"
+          # 4. Sourcing Zephyr Environment (Error Handled Inline)
+          echo "--- 4. Sourcing Zephyr Environment Variables ---"
           . "$ZEPHYR_ENV_SCRIPT" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
 
-          # 6. Build Setup and CMake Execution
-          echo "--- 6. Starting Final CMake Build ---"
+          # 5. Build Setup and CMake Execution
+          echo "--- 5. Starting Final CMake Build ---"
           
           # --- Runtime Path Definitions ---
           BUILD_DIR="$APP_REPO_DIR/build"
           APP_SOURCE_DIR="$APP_REPO_DIR" # Initial assumption
           
-          # 7. BACKUP PLAN: Check for nested 'app' directory (where CMakeLists.txt resides)
+          # 6. BACKUP PLAN: Check for nested 'app' directory (where CMakeLists.txt resides)
           if [ -f "$APP_REPO_DIR/app/CMakeLists.txt" ]; then
              echo "TRACE: Found CMakeLists.txt in nested app directory. Adjusting source path."
              APP_SOURCE_DIR="$APP_REPO_DIR/app"
@@ -86,10 +77,10 @@ jobs:
              echo "TRACE: Found CMakeLists.txt in expected top-level ZMK app directory."
           fi
 
-          # 8. Execute CMake
+          # 7. Execute CMake
           echo "TRACE: Source Directory Final Path: $APP_SOURCE_DIR"
           
-          # A. CMake Configure Step (Definitive fix for all path issues)
+          # A. CMake Configure Step (FINAL FIX: Setting BOARD_ROOT to the correct ZMK app directory)
           cmake -B "$BUILD_DIR" \
             -GNinja \
             -DBOARD=nrf52840dk_nrf52840 \
@@ -98,7 +89,7 @@ jobs:
             -DZEPHYR_BASE="$ZEPHYR_DIR" \
             -DCMAKE_PREFIX_PATH="$ZEPHYR_DIR" \
             -DZEPHYR_DIR="$ZEPHYR_DIR" \
-            -DBOARD_ROOT="$APP_REPO_DIR" \
+            -DBOARD_ROOT="$APP_SOURCE_DIR" \
             -S "$APP_SOURCE_DIR" || { echo "FATAL: CMake configuration failed. Review logs for board/shield errors."; exit 1; }
             
           # B. CMake Build Execution Step (Error Handled Inline)
