--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,10 +48,12 @@ jobs:
           git clone --depth 1 --branch "$ZEPHYR_REVISION" https://github.com/zephyrproject-rtos/zephyr.git "$ZEPHYR_DIR" || { echo "FATAL: Zephyr clone failed."; exit 1; }
           git clone --depth 1 --branch "$MCUB_REVISION" https://github.com/mcu-tools/mcuboot.git "$ZMK_REPO_ROOT/bootloader/mcuboot" || { echo "FATAL: MCUBoot clone failed."; exit 1; }
 
-          # 3. 🔍 VALIDATION CHECK: Verify critical Zephyr paths
+          # 3. 🔍 VALIDATION CHECK: Verify critical Zephyr paths (FIXED SYNTAX)
           echo "--- 3. VALIDATING ZEPHYR ENVIRONMENT ---"
-          if [ ! -d "$ZEPHYR_DIR" ]; then echo "FATAL: Zephyr base directory not found at $ZEPHYR_DIR"; exit 1; }
-          if [ ! -f "$ZEPHYR_ENV_SCRIPT" ]; then echo "FATAL: Zephyr environment script not found at $ZEPHYR_ENV_SCRIPT"; exit 1; }
+          # Check 1: Zephyr directory exists
+          [ -d "$ZEPHYR_DIR" ] || { echo "FATAL: Zephyr base directory not found at $ZEPHYR_DIR"; exit 1; }
+          # Check 2: zephyr-env.sh exists
+          [ -f "$ZEPHYR_ENV_SCRIPT" ] || { echo "FATAL: Zephyr environment script not found at $ZEPHYR_ENV_SCRIPT"; exit 1; }
           echo "TRACE: All environment checks passed."
 
           # 4. Sourcing Zephyr Environment (Error Handled Inline)
@@ -80,7 +82,7 @@ jobs:
           # 7. Execute CMake
           echo "TRACE: Source Directory Final Path: $APP_SOURCE_DIR"
           
-          # A. CMake Configure Step (FINAL FIX: Setting BOARD_ROOT to the correct ZMK app directory)
+          # A. CMake Configure Step (Definitive fix for all path issues, using APP_SOURCE_DIR for BOARD_ROOT)
           cmake -B "$BUILD_DIR" \
             -GNinja \
             -DBOARD=nrf52840dk_nrf52840 \
