--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,14 +45,17 @@ jobs:
           # 2. Clone Dependencies (Error Handled Inline)
           echo "--- 2. Cloning Dependencies ---"
           git clone --depth 1 --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$APP_REPO_DIR" || { echo "FATAL: ZMK clone failed."; exit 1; }
+          
+          # ⚠️ FIX: Initialize ZMK submodules to pull in crucial board definitions and dependencies.
+          echo "--- 2a. Initializing ZMK Submodules ---"
+          (cd "$APP_REPO_DIR" && git submodule update --init) || { echo "FATAL: ZMK submodule initialization failed."; exit 1; }
+          
           git clone --depth 1 --branch "$ZEPHYR_REVISION" https://github.com/zephyrproject-rtos/zephyr.git "$ZEPHYR_DIR" || { echo "FATAL: Zephyr clone failed."; exit 1; }
           git clone --depth 1 --branch "$MCUB_REVISION" https://github.com/mcu-tools/mcuboot.git "$ZMK_REPO_ROOT/bootloader/mcuboot" || { echo "FATAL: MCUBoot clone failed."; exit 1; }
 
-          # 3. 🔍 VALIDATION CHECK: Verify critical Zephyr paths (FIXED SYNTAX)
+          # 3. 🔍 VALIDATION CHECK: Verify critical Zephyr paths 
           echo "--- 3. VALIDATING ZEPHYR ENVIRONMENT ---"
-          # Check 1: Zephyr directory exists
           [ -d "$ZEPHYR_DIR" ] || { echo "FATAL: Zephyr base directory not found at $ZEPHYR_DIR"; exit 1; }
-          # Check 2: zephyr-env.sh exists
           [ -f "$ZEPHYR_ENV_SCRIPT" ] || { echo "FATAL: Zephyr environment script not found at $ZEPHYR_ENV_SCRIPT"; exit 1; }
           echo "TRACE: All environment checks passed."
 
@@ -82,7 +85,7 @@ jobs:
           # 7. Execute CMake
           echo "TRACE: Source Directory Final Path: $APP_SOURCE_DIR"
           
-          # A. CMake Configure Step (Definitive fix for all path issues, using APP_SOURCE_DIR for BOARD_ROOT)
+          # A. CMake Configure Step (Uses APP_SOURCE_DIR for BOARD_ROOT to find nested shields)
           cmake -B "$BUILD_DIR" \
             -GNinja \
             -DBOARD=nrf52840dk_nrf52840 \
