--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
           ZEPHYR_DIR="$ZMK_REPO_ROOT/zephyr"
           ZEPHYR_ENV_SCRIPT="$ZEPHYR_DIR/zephyr-env.sh"
           APP_REPO_DIR="$ZMK_REPO_ROOT/app" # ZMK Clone Root
+          SHIELD_NAME="crkbd_left" # Initial target shield
           
           # 1. Create the base ZMK structure
           echo "--- 1. Creating target directories ---"
@@ -42,11 +43,10 @@ jobs:
           mkdir -p "$APP_REPO_DIR" || { echo "FATAL: Failed to create ZMK app directory."; exit 1; }
           mkdir -p "$ZMK_REPO_ROOT/bootloader/mcuboot" || { echo "FATAL: Failed to create MCUBoot directory."; exit 1; }
 
-          # 2. Clone Dependencies (Error Handled Inline)
+          # 2. Clone Dependencies
           echo "--- 2. Cloning Dependencies ---"
-          # ⚠️ FINAL FIX: Use --recursive to ensure all shields and board definitions are fetched.
+          # Use --recursive to ensure all shields and board definitions are fetched.
           git clone --depth 1 --branch "$ZMK_REVISION" --recursive https://github.com/zmkfirmware/zmk.git "$APP_REPO_DIR" || { echo "FATAL: ZMK clone failed."; exit 1; }
-          
           git clone --depth 1 --branch "$ZEPHYR_REVISION" https://github.com/zephyrproject-rtos/zephyr.git "$ZEPHYR_DIR" || { echo "FATAL: Zephyr clone failed."; exit 1; }
           git clone --depth 1 --branch "$MCUB_REVISION" https://github.com/mcu-tools/mcuboot.git "$ZMK_REPO_ROOT/bootloader/mcuboot" || { echo "FATAL: MCUBoot clone failed."; exit 1; }
 
@@ -78,15 +78,36 @@ jobs:
           else
              echo "TRACE: Found CMakeLists.txt in expected top-level ZMK app directory."
           fi
-
-          # 7. Execute CMake
-          echo "TRACE: Source Directory Final Path: $APP_SOURCE_DIR"
           
-          # A. CMake Configure Step (Uses APP_SOURCE_DIR for BOARD_ROOT to find nested shields)
+          # 7. 🛡️ SHIELD CHECK AND BACKUP LOGIC
+          SHIELD_DIR="$APP_SOURCE_DIR/boards/shields"
+          echo "--- 7. Shield Selection Logic ---"
+          echo "TRACE: Listing available shields in $SHIELD_DIR..."
+          ls -F "$SHIELD_DIR" || { echo "FATAL: ZMK Shield directory not found at $SHIELD_DIR."; exit 1; }
+          
+          if [ -d "$SHIELD_DIR/$SHIELD_NAME" ]; then
+              echo "SUCCESS: Found primary shield $SHIELD_NAME."
+          elif [ -d "$SHIELD_DIR/corne_left" ]; then
+              SHIELD_NAME="corne_left"
+              echo "WARNING: Primary shield missing. Using FIRST ALTERNATIVE: $SHIELD_NAME."
+          elif [ -d "$SHIELD_DIR/promicro" ]; then
+              SHIELD_NAME="promicro"
+              echo "CRITICAL: Primary shield and first alternative missing. Using SECOND ALTERNATIVE (Generic): $SHIELD_NAME."
+              echo "NOTE: This requires all matrix pins to be defined in your /config files."
+          else
+              echo "FATAL: CRITICAL ERROR: Neither '$SHIELD_NAME', 'corne_left', nor 'promicro' shields were found after cloning."
+              exit 1
+          fi
+
+          # 8. Execute CMake
+          echo "TRACE: Source Directory Final Path: $APP_SOURCE_DIR"
+          echo "TRACE: Final SHIELD to use: $SHIELD_NAME"
+          
+          # A. CMake Configure Step (Uses the dynamically determined SHIELD_NAME)
           cmake -B "$BUILD_DIR" \
             -GNinja \
             -DBOARD=nrf52840dk_nrf52840 \
-            -DSHIELD=crkbd_left \
+            -DSHIELD="$SHIELD_NAME" \
             -DZMK_CONFIG="$GITHUB_WORKSPACE/config" \
             -DZEPHYR_BASE="$ZEPHYR_DIR" \
             -DCMAKE_PREFIX_PATH="$ZEPHYR_DIR" \
