--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: ZMK Fully Manual Dependency Build (Board-Only)
+name: ZMK Fully Manual Dependency Build (Base Board Test)
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
         with:
           fetch-depth: 0 
           
-      - name: ⚙️ Manual Git Clone and CMake Build (Board-Only Script)
+      - name: ⚙️ Manual Git Clone and CMake Build (Base Board Script)
         shell: bash
         run: |
           # --- Configuration Variables ---
@@ -35,6 +35,7 @@ jobs:
           ZEPHYR_DIR="$ZMK_REPO_ROOT/zephyr"
           ZEPHYR_ENV_SCRIPT="$ZEPHYR_DIR/zephyr-env.sh"
           APP_REPO_DIR="$ZMK_REPO_ROOT/app" # ZMK Clone Root
+          BUILD_DIR="$APP_REPO_DIR/build"
           
           # 1. Create the base ZMK structure
           echo "--- 1. Creating target directories ---"
@@ -44,9 +45,7 @@ jobs:
 
           # 2. Clone Dependencies
           echo "--- 2. Cloning Dependencies ---"
-          # Use --recursive to ensure all dependencies are fetched.
           git clone --depth 1 --branch "$ZMK_REVISION" --recursive https://github.com/zmkfirmware/zmk.git "$APP_REPO_DIR" || { echo "FATAL: ZMK clone failed."; exit 1; }
-          
           git clone --depth 1 --branch "$ZEPHYR_REVISION" https://github.com/zephyrproject-rtos/zephyr.git "$ZEPHYR_DIR" || { echo "FATAL: Zephyr clone failed."; exit 1; }
           git clone --depth 1 --branch "$MCUB_REVISION" https://github.com/mcu-tools/mcuboot.git "$ZMK_REPO_ROOT/bootloader/mcuboot" || { echo "FATAL: MCUBoot clone failed."; exit 1; }
 
@@ -61,10 +60,9 @@ jobs:
           . "$ZEPHYR_ENV_SCRIPT" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
 
           # 5. Build Setup and CMake Execution
-          echo "--- 5. Starting Final CMake Build (Board-Only) ---"
+          echo "--- 5. Starting Final CMake Build (Base Board Isolation) ---"
           
           # --- Runtime Path Definitions ---
-          BUILD_DIR="$APP_REPO_DIR/build"
           APP_SOURCE_DIR="$APP_REPO_DIR" # Initial assumption
           
           # 6. BACKUP PLAN: Check for nested 'app' directory
@@ -81,24 +79,30 @@ jobs:
 
           # 7. Execute CMake
           echo "TRACE: Source Directory Final Path: $APP_SOURCE_DIR"
-          echo "TRACE: Final configuration will use the ZMK 'nice_nano_v2' board definition (nRF52840) and rely entirely on custom overlays in /config."
+          echo "TRACE: Attempting to configure the base 'nice_nano_v2' board without any custom configuration."
           
-          # A. CMake Configure Step (Removed SHIELD, changed BOARD back to ZMK board)
+          # A. CMake Configure Step (REMOVED -DZMK_CONFIG for isolation)
           cmake -B "$BUILD_DIR" \
             -GNinja \
             -DBOARD=nice_nano_v2 \
-            -DZMK_CONFIG="$GITHUB_WORKSPACE/config" \
             -DZEPHYR_BASE="$ZEPHYR_DIR" \
             -DCMAKE_PREFIX_PATH="$ZEPHYR_DIR" \
             -DZEPHYR_DIR="$ZEPHYR_DIR" \
             -DBOARD_ROOT="$APP_SOURCE_DIR" \
             -S "$APP_SOURCE_DIR" || { echo "FATAL: CMake configuration failed. Review logs for board errors."; exit 1; }
             
-          # B. CMake Build Execution Step (Error Handled Inline)
+          # B. CMake Build Execution Step (If configure succeeds, start the build)
           echo "TRACE: Executing build in directory: $BUILD_DIR"
           cmake --build "$BUILD_DIR" || { echo "FATAL: Build execution failed. Compilation error."; exit 1; }
           
-      - name: ⬆️ Upload Artifacts
+      - name: ⬆️ Upload Failed DTS Artifact for Debugging
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: failed-dts-file
+          path: ${{ github.workspace }}/zmk/app/build/zephyr/nice_nano_v2.dts.pre.tmp
+          
+      - name: ⬆️ Upload Final Firmware Artifacts
         uses: actions/upload-artifact@v4
         if: success()
         with:
