--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,16 +34,20 @@ jobs:
           
           # 1. Initialize and Update West Workspace
           echo "--- 1. Setting up West Workspace ---"
+          # Clone ZMK repository
           git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR" || exit 1
           mkdir -p "$ZMK_ROOT"
+          # Initialize west workspace with the ZMK repository
           west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT" || exit 1
           cd "$ZMK_ROOT"
+          # Fetch and update all modules (This is where the initial log ended)
           west update || exit 1
           
           # 2. Prepare Application Source
           echo "--- 2. Preparing Application Source and Configuration ---"
           mkdir -p "$ZMK_ROOT/app"
-          cp -r "$ZMK_ROOT/app_clone/app/"* "$ZMK_ROOT/app" || exit 1
+          # Copy the core ZMK application files
+          cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app" || exit 1
           
           # 3. Copy/Patch Files DIRECTLY to Application Root
           echo "--- 3. Copying Files to App Root for Direct Discovery ---"
@@ -53,14 +57,11 @@ jobs:
           cp "$CUSTOM_CONFIG_DIR/mediapad3.keymap" "$KEYMAP_DEST" || { echo "FATAL: Keymap file missing or failed copy."; exit 1; }
           
           # Overlay: Must be named BOARD_NAME.overlay
+          # This file MUST now contain: compatible = "zmk,kscan-gpio-matrix"; and rows/columns properties.
           OVERLAY_DEST="$ZMK_ROOT/app/$BOARD_NAME.overlay"
           cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$OVERLAY_DEST" || { echo "FATAL: Overlay file missing or failed copy."; exit 1; }
           
-          # Patch the overlay (Critical for C compilation: rows/columns)
-          if ! grep -q "rows" "$OVERLAY_DEST"; then
-              echo "Patching overlay with missing rows=<1> and columns=<3> properties..."
-              sed -i '/kscan_0:/a \ \ \ \ \ \ \ \ rows = <1>;\n\ \ \ \ \ \ \ \ columns = <3>;' "$OVERLAY_DEST"
-          fi
+          # 🚨 REMOVED REDUNDANT PATCHING: The rows/columns properties are now assumed to be correct in the copied overlay file.
           
           # 4. Source Zephyr Environment
           echo "--- 4. Sourcing Zephyr Environment Variables ---"
@@ -69,7 +70,7 @@ jobs:
           # 5. Build Application
           echo "--- 5. Starting Final West Build (Without SHIELD) ---"
           
-          # 🔥 FINAL FIX: No -DSHIELD=mediapad flag
+          # The build now expects the correct properties in the overlay and should pass.
           west build -b $BOARD_NAME "$ZMK_ROOT/app" || { 
             echo "FATAL: West build failed."
             exit 1
