--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,13 +48,13 @@ jobs:
           # 3. Copy/Patch Files DIRECTLY to Application Root
           echo "--- 3. Copying Files to App Root for Direct Discovery ---"
           
-          # Keymap 🔑: Use BOARD_NAME.keymap as source and destination to fix the "Failed to locate keymap file!" warning.
+          # Keymap 🔑: Use BOARD_NAME.keymap as source and destination.
           KEYMAP_SOURCE="$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap"
           KEYMAP_DEST="$ZMK_ROOT/app/$BOARD_NAME.keymap"
           cp "$KEYMAP_SOURCE" "$KEYMAP_DEST" || { echo "FATAL: Keymap file missing or failed copy. Ensure $KEYMAP_SOURCE exists."; exit 1; }
           echo "✅ Keymap copied as $BOARD_NAME.keymap."
           
-          # Overlay 🗺️: This file now contains the matrix_transform_0 node.
+          # Overlay 🗺️
           OVERLAY_SOURCE="$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay"
           OVERLAY_DEST="$ZMK_ROOT/app/$BOARD_NAME.overlay"
           cp "$OVERLAY_SOURCE" "$OVERLAY_DEST" || { echo "FATAL: Overlay file missing or failed copy."; exit 1; }
@@ -63,37 +63,5 @@ jobs:
           echo "--- VERIFYING OVERLAY FILE ($OVERLAY_DEST) ---"
           cat "$OVERLAY_DEST"
           
-          # Critical check: Does the file contain the required matrix-transform compatible?
-          if ! grep -q "zmk,matrix-transform" "$OVERLAY_DEST"; then
-              echo "🚨 FATAL: Overlay file is missing the required 'zmk,matrix-transform' node definition!"
-              exit 1
-          fi
-          echo "✅ 'zmk,matrix-transform' property confirmed in the copied overlay file."
-          
-          # 4. Source Zephyr Environment
-          echo "--- 4. Sourcing Zephyr Environment Variables ---"
-          . "$ZMK_ROOT/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
-
-          # 5. Build Application
-          echo "--- 5. Starting Final West Build (Without SHIELD) ---"
-          
-          west build -b $BOARD_NAME "$ZMK_ROOT/app" || { 
-            echo "FATAL: West build failed."
-            exit 1
-          }
-          
-          # 🚀 POST-BUILD VERIFICATION: Check the merged devicetree
-          DTS_FILE="$ZMK_ROOT/build/zephyr/zephyr.dts"
-          if [ -f "$DTS_FILE" ]; then
-              echo "--- POST-BUILD VERIFICATION: Checking final kscan and transform configuration in zephyr.dts ---"
-              grep -A 10 "kscan_0:" "$DTS_FILE"
-              grep -A 5 "matrix_transform_0:" "$DTS_FILE"
-              echo "--- END DTS VERIFICATION ---"
-          fi
-          
-      - name: ⬆️ Upload Artifacts
-        uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: zmk-firmware
-          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zmk.uf2
+          # Critical check 1: Check for the required matrix-transform macro syntax
+          if ! grep -q "ZMK_MATRIX_TRANSFORM_ROW_COLUMN_MAP" "$OVERLAY_DEST";
