--- a/config/prj.conf
+++ b/config/prj.conf
@@ -1,6 +1,7 @@
 # Core ZMK settings
 CONFIG_ZMK_KEYMAP=y
 CONFIG_ZMK_MATRIX=y
+CONFIG_ZMK_BEHAVIOR_DEV_NAME_PREFIX="ZMK"
 
 # Only enable key_press behavior
 CONFIG_ZMK_BEHAVIOR_KEY_PRESS=y
