--- a/config/prj.conf
+++ b/config/prj.conf
@@ -1,18 +1,4 @@
 # Core ZMK settings
 CONFIG_ZMK_KEYMAP=y
-CONFIG_ZMK_MATRIX=y
-CONFIG_ZMK_BEHAVIOR_DEV_NAME_PREFIX="ZMK"
-
-# Only enable key_press behavior
-CONFIG_ZMK_BEHAVIOR_KEY_PRESS=y
-
-# Disable all other behaviors to avoid build issues
-CONFIG_ZMK_BEHAVIOR_MOMENTARY_LAYER=n
-CONFIG_ZMK_BEHAVIOR_KEY_REPEAT=n
-CONFIG_ZMK_BEHAVIOR_MOD_MORPH=n
-CONFIG_ZMK_BEHAVIOR_CAPS_WORD=n
-CONFIG_ZMK_BEHAVIOR_TOGGLE_LAYER=n
-
-# Optional: logging for debugging
-CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=3
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_LOG_LEVEL=3
